// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders while running 1`] = `
<div
  class="sc-dlniIP itDDJR"
>
  <div
    class="sc-eCAqax jaSMwk"
  >
    <span
      class="sc-jSFipO"
    >
      0
    </span>
    <span
      class="sc-gKAaef OzFGy"
    >
      42
    </span>
  </div>
  <button
    class="sc-bdnyFh sc-gtsqUy eatPBi cXtim"
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  class="sc-dlniIP itDDJR"
>
  <div
    class="sc-hKFymg kjAHYM"
  >
    🛌🛌
  </div>
  <button
    class="sc-bdnyFh sc-gtsqUy lhChhx cXtim"
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  class="sc-dlniIP itDDJR"
>
  <div
    class="sc-hKFymg kjAHYM"
  >
    🍅
  </div>
  <button
    class="sc-bdnyFh sc-gtsqUy lhChhx cXtim"
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  class="sc-dlniIP itDDJR"
>
  <div
    class="sc-hKFymg kjAHYM"
  >
    🛌
  </div>
  <button
    class="sc-bdnyFh sc-gtsqUy lhChhx cXtim"
  >
    Start
  </button>
</div>
`;
